[package]
name = "sitegen"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
minijinja = { version = "2.12.0", features = ["loader"] }
ron = "0.11.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"

[dev-dependencies]
tempfile = "3.21.0"
